--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Mostafa Eweda <mo.eweda@gmail.com>",
   "dependencies": {
     "async": "~0.2.8",
-    "express": "~3.2.4",
+    "express": "^3.2.6",
+    "jade": "^1.11.0",
     "socket.io": "~0.9.14"
   }
 }
